Fix Vercel static file serving

--- a/vercel.json
+++ b/vercel.json
@@ -4,16 +4,16 @@
     {
       "src": "api/**/*.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "index.html",
-      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
-      "src": "/api/news",
-      "dest": "/api/news.js"
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/$1"
     },
     {
       "src": "/(.*)",
