--- a/vercel.json
+++ b/vercel.json
@@ -8,16 +8,20 @@
   ],
   "routes": [
     {
+      "src": "/api/news",
+      "dest": "/api/news.js"
+    },
+    {
       "src": "/api/(.*)",
       "dest": "/api/$1"
     },
     {
-      "src": "/(.*)",
-      "dest": "/$1"
-    },
-    {
-      "src": "/(.*)",
+      "src": "/.*",
       "dest": "/index.html"
     }
-  ]
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
+
