--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "news-api",
+  "name": "news-website",
+  "private": true,
   "version": "1.0.0",
-  "description": "Personal News API backend",
-  "main": "server.js",
+  "description": "News app monorepo (client + server)",
+  "workspaces": ["client", "server"],
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev:server": "npm run dev --prefix server",
+    "start:server": "npm start --prefix server",
+    "dev:client": "npm run dev --prefix client",
+    "build:client": "npm run build --prefix client",
+    "preview:client": "npm run preview --prefix client"
   },
-  "keywords": ["news", "api"],
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "axios": "^1.6.0",
-    "dotenv": "^16.3.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  }
+  "keywords": ["news", "api", "react", "express"],
+  "license": "MIT"
 }
