--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start:server": "npm start --prefix server",
     "dev:client": "npm run dev --prefix client",
     "build:client": "npm run build --prefix client",
+    "build": "npm run build --prefix client",
     "preview:client": "npm run preview --prefix client"
   },
   "keywords": ["news", "api", "react", "express"],
