--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,45 @@
-# Node/Vercel/Frontend
-node_modules/
-.env
+### OS / Editor ###
 .DS_Store
-.vercel/
-.vercelignore
+Thumbs.db
+.idea/
+*.iml
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+
+### Env / Secrets ###
+.env
+.env.*
+!.env.example
+
+### Logs ###
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-# Build outputs
-out/
+pnpm-debug.log*
+lerna-debug.log*
+
+### Node ###
+node_modules/
+.npmrc
+
+### Build outputs / Caches ###
 dist/
+build/
+out/
 .next/
-# Local dev servers
+.nuxt/
+.svelte-kit/
+.cache/
+.tmp/
+.vite/
 coverage/
+*.lcov
+
+### Vercel ###
+.vercel/
+.vercelignore
